--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/leaflet": "^1.9.19",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
     "leaflet": "^1.9.4",
     "next": "15.3.4",
