--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/leaflet": "^1.9.19",
+    "docxtemplater": "^3.65.2",
     "framer-motion": "^12.23.0",
     "leaflet": "^1.9.4",
     "next": "15.3.4",
+    "pizzip": "^3.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -24,6 +26,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pizzip": "^3.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
