--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/leaflet": "^1.9.19",
+    "date-fns": "^4.1.0",
     "docxtemplater": "^3.65.2",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
