--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.3.5",
     "@types/leaflet": "^1.9.19",
     "date-fns": "^4.1.0",
     "docxtemplater": "^3.65.2",
