--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.3.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
     "tailwindcss": "^4",
     "typescript": "^5",
