--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "postbuild": "netlify build",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
     "leaflet": "^1.9.4",
+    "netlify": "^22.2.2",
     "next": "15.3.4",
     "pizzip": "^3.2.0",
     "react": "^19.1.0",
