--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@netlify/next": "^1.4.9",
     "@types/leaflet": "^1.9.19",
+    "date-fns": "^4.1.0",
     "docxtemplater": "^3.65.2",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
     "leaflet": "^1.9.4",
+    "netlify": "^22.2.2",
     "next": "15.3.4",
     "pizzip": "^3.2.0",
     "react": "^19.1.0",
