Tambahkan dukungan untuk kompresi gambar menggunakan browser-image-compression di beberapa formulir layanan, serta perbarui tipe data untuk file menjadi string. Perbaiki pengelolaan unggahan file dan validasi input di formulir Domisili, Kelahiran, Meninggal, Pindah, dan Tempat Tinggal. Ganti format file yang diterima menjadi .jpg, .jpeg, .png, dan .webp dengan batas ukuran 1MB setelah kompresi.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@netlify/next": "^1.4.9",
     "@types/leaflet": "^1.9.19",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "docxtemplater": "^3.65.2",
     "firebase": "^11.10.0",
